[package]
name = "minils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.7", features = ["derive"] }
colorama = "0.1.0"
cliform = { path = "../cliform" }
termsize = "0.1.6"
